--- a/home.html
+++ b/home.html
@@ -3,11 +3,12 @@
 <head>
   <title>A Practice Todo List</title>
   <script type="text/javascript" src="assets/js/lib/jquery-2.1.4.js"></script>
+  <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,500' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 </head>
 <body>
   <div id="container">
-    <h1>To - Do List</h1>
+    <h1>To-Do List</h1>
     <input type="text" placeholder="enter items here"></input>
     <ul>
       <li><span>x</span> Get wand for school</li>
