--- a/home.html
+++ b/home.html
@@ -4,17 +4,23 @@
   <title>A Practice Todo List</title>
   <script type="text/javascript" src="assets/js/lib/jquery-2.1.4.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,500' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 </head>
 <body>
   <div id="container">
-    <h1>To-Do List</h1>
-    <input type="text" placeholder="enter items here"></input>
+    <h1>To-Do List
+    <i class="fa fa-plus" aria-hidden="true"></i></h1>
+    <input type="text" placeholder="Add new todo"></input>
     <ul>
-      <li><span>x</span> Get wand for school</li>
-      <li><span>x</span> Go to potions class</li>
-      <li><span>x</span> Get some butterbeer</li>
-      <li><span>x</span> Visit Ron</li>
+      <li><span><i class="fa fa-trash-o" aria-hidden="true"></i>
+      </span> Get wand for school</li>
+      <li><span><i class="fa fa-trash-o" aria-hidden="true"></i>
+      </span> Go to potions class</li>
+      <li><span><i class="fa fa-trash-o" aria-hidden="true"></i>
+      </span> Get some butterbeer</li>
+      <li><span><i class="fa fa-trash-o" aria-hidden="true"></i>
+      </span> Visit Ron</li>
     </ul>
   </div>
 <script type="text/javascript" src="assets/js/todoList.js"></script>
