--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
   <div id="container">
     <h1>To-Do List
     <i class="fa fa-plus" aria-hidden="true"></i></h1>
-    <input type="text" placeholder="Add new todo"></input>
+    <input type="text" placeholder="Add new todo"  required="required"></input>
     <ul>
       <li><span><i class="fa fa-trash-o" aria-hidden="true"></i>
       </span> Get wand for school</li>
