add footer and footer styles

--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>A Practice Todo List</title>
+  <title>A Practical Todo List</title>
   <script type="text/javascript" src="assets/js/lib/jquery-2.1.4.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,500' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
@@ -23,6 +23,8 @@
       </span> Visit Ron</li>
     </ul>
   </div>
+
+  <footer>Coded with <i class="fa fa-heart" aria-hidden="true"></i> by Nathaniel Quashie</footer>
 <script type="text/javascript" src="assets/js/todoList.js"></script>
 </body>
 </html>
